--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -244,7 +244,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Comparison of the spawning output (millions of eggs) of the 2017 model with an updated SS3 executable (blue), updated historical catch data (red), and catch extened to 2024 (green)."
+#| fig-cap: "Comparison of the spawning output (billions of eggs) of the 2017 model with an updated SS3 executable (blue), updated historical catch data (red), and catch extened to 2024 (green)."
 #
 knitr::include_graphics(
     "figures/bridging/3_extendedcatch/compare2_spawnbio_uncertainty.png"
@@ -280,7 +280,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Comparison of the spawning output (millions of eggs) of the 2017 model with an updated SS3 executable (blue), updated and extended historical catch data (green), updated historical indices (yellow), and indices extended to 2024 (red)."
+#| fig-cap: "Comparison of the spawning output (billions of eggs) of the 2017 model with an updated SS3 executable (blue), updated and extended historical catch data (green), updated historical indices (yellow), and indices extended to 2024 (red)."
 #
 knitr::include_graphics(
     "figures/bridging/5_newindices/compare2_spawnbio_uncertainty.png"
@@ -292,7 +292,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Comparison of the spawning output (millions of eggs) of the 2017 model with an updated SS3 executable (blue), updated and extended catch and indices (red), and all tuned length and age composition data (green)."
+#| fig-cap: "Comparison of the spawning output (billions of eggs) of the 2017 model with an updated SS3 executable (blue), updated and extended catch and indices (red), and all tuned length and age composition data (green)."
 #
 knitr::include_graphics(
     "figures/bridging/14_tunecomps/compare2_spawnbio_uncertainty.png"
@@ -316,7 +316,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Comparison of the spawning output (millions of eggs) of the 2017 model with an updated SS3 executable (blue), updated and extended and tuned data (green), the updated SS input file changes with tuning (yellow), and the proposed 2025 base model after all final bridging steps (red), all with 95% confidence intervals."
+#| fig-cap: "Comparison of the spawning output (billions of eggs) of the 2017 model with an updated SS3 executable (blue), updated and extended and tuned data (green), the updated SS input file changes with tuning (yellow), and the proposed 2025 base model after all final bridging steps (red), all with 95% confidence intervals."
 #
 knitr::include_graphics(
     "figures/bridging/23_alldata_tunecomps_fitbias_upctl_tuned_upstart_refine_fore/compare2_spawnbio_uncertainty.png"
@@ -394,7 +394,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) at length. Yelloweye length-at-age 70 (the second reference age) equals 61.4 and an L-infinity of 61.7."
+#| fig-cap: "Spawning output (billions of eggs) at length. Yelloweye length-at-age 70 (the second reference age) equals 61.4 and an L-infinity of 61.7."
 
 knitr::include_graphics(
     "figures/r4ss_plots/plots/bio10_spawningoutput_len.png"
@@ -664,7 +664,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Estimated spawning output (millions of eggs) over time for both areas combined."
+#| fig-cap: "Estimated spawning output (billions of eggs) over time for both areas combined."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/ts7_Spawning_output_with_95_intervals.png"
@@ -676,7 +676,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Estimated spawning output (millions of eggs) over time and by area (Area 1 is California, Area 2 is Oregon/Washington combined)."
+#| fig-cap: "Estimated spawning output (billions of eggs) over time and by area (Area 1 is California, Area 2 is Oregon/Washington combined)."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/ts8_Spawning_output_by_area.png"
@@ -779,7 +779,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) across model structure sensitivities."
+#| fig-cap: "Spawning output (billions of eggs) across model structure sensitivities."
 #
 knitr::include_graphics(
     "figures/sensitivities/modelingcompare2_spawnbio_uncertainty.png"
@@ -804,7 +804,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) across length composition inclusion sensitivities (1 of 2)."
+#| fig-cap: "Spawning output (billions of eggs) across length composition inclusion sensitivities (1 of 2)."
 #
 knitr::include_graphics(
     "figures/sensitivities/length_comps_1compare2_spawnbio_uncertainty.png"
@@ -816,7 +816,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) across length composition inclusion sensitivities (2 of 2)."
+#| fig-cap: "Spawning output (billions of eggs) across length composition inclusion sensitivities (2 of 2)."
 #
 knitr::include_graphics(
     "figures/sensitivities/length_comps_2compare2_spawnbio_uncertainty.png"
@@ -854,7 +854,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) across age composition inclusion sensitivities (1 of 2)."
+#| fig-cap: "Spawning output (billions of eggs) across age composition inclusion sensitivities (1 of 2)."
 #
 knitr::include_graphics(
     "figures/sensitivities/age_comps_1compare2_spawnbio_uncertainty.png"
@@ -866,7 +866,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) across age composition inclusion sensitivities (2 of 2)."
+#| fig-cap: "Spawning output (billions of eggs) across age composition inclusion sensitivities (2 of 2)."
 #
 knitr::include_graphics(
     "figures/sensitivities/age_comps_2compare2_spawnbio_uncertainty.png"
@@ -903,7 +903,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) across index inclusion sensitivities."
+#| fig-cap: "Spawning output (billions of eggs) across index inclusion sensitivities."
 #
 knitr::include_graphics(
     "figures/sensitivities/indicescompare2_spawnbio_uncertainty.png"
@@ -955,7 +955,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Results of retrospective analysis. Spawning output (millions of eggs) time series of this assesment base model are proved with ~95% interval."
+#| fig-cap: "Results of retrospective analysis. Spawning output (billions of eggs) time series of this assesment base model are proved with ~95% interval."
 #
 knitr::include_graphics(
     "figures/diagnostics/2025_base_model_retro_5_yr_peel/compare2_spawnbio_uncertainty.png"
@@ -1067,7 +1067,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Spawning output (millions of eggs) as profiled over values of lnR0."
+#| fig-cap: "Spawning output (billions of eggs) as profiled over values of lnR0."
 #
 knitr::include_graphics(
     "figures/diagnostics/2025_base_model_profile_SR_LN(R0)/SR_LN(R0)_trajectories_compare1_spawnbio.png"
