--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -8,9 +8,9 @@
 <!-- 4. Reference points based on MSY (if estimated) (spawning biomass and/or output, SPR, exploitation rate, equilibrium yield).  -->
 <!-- 5. Equilibrium yield curve showing various BMSY proxies.   -->
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target of SO40% of unfished spawning output. Both areas (California and Oregon-Washington) are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SO40% target for the first time in 1986 and below the overfished SO25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 15.6% of its unfished output in 2000 (@tbl-ts). The stock was declared overfished in 2002. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target of SO~40%~ of unfished spawning output. Both areas (California and Oregon-Washington) are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SO~40%~ target for the first time in 1986 and below the overfished SO25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 15.6% of its unfished output in 2000 (@tbl-ts). The stock was declared overfished in 2002. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
 
-Reference points for the base model are summarized in @tbl-ref-points-es-2. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` billion eggs (95% confidence interval: 1,048.1 - 1,331.9 billion eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SO25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 billion eggs (95% confidence interval: 419 - 533 billion eggs), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108 - 137 mt). The model estimate of maximum sustainable yield (MSY) is 128 mt (95% confidence interval: 113 - 143 mt). The estimated spawning stock output at MSY is 343 billion eggs (95% confidence interval: 303-384 billion eggs). The exploitation rate corresponding to the estimated SPRMSY is 0.037.
+Reference points for the base model are summarized in @tbl-ref-points-es-2. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` billion eggs (95% confidence interval: 1,048.1 - 1,331.9 billion eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SO25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO~40%~), which is estimated by the model to be 476 billion eggs (95% confidence interval: 419 - 533 billion eggs), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO~40%~ (95% confidence interval: 108 - 137 mt). The model estimate of maximum sustainable yield (MSY) is 128 mt (95% confidence interval: 113 - 143 mt). The estimated spawning stock output at MSY is 343 billion eggs (95% confidence interval: 303-384 billion eggs). The exploitation rate corresponding to the estimated SPRMSY is 0.037.
 
 This assessment estimates that the 2024 SPR is `r ((((round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SPRratio_2024")], 3)*0.5)-1)*(-1)))*100`% (@fig-time-spr). The SPR used for setting the OFL is 50%, while the SPR-based management fishing mortality target specified in the current rebuilding plan and used to determine the \gls{acl} is 76% (when the SPR is greater than this value, the exploitation is below the target). Relative exploitation rates (calculated as catch/biomass of age-8 and older fish) are estimated to have been below 1% during the last decade. This assessment estimates that Yelloweye Rockfish was fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget = 0.5) between 1977 and 2000. The equilibrium yield curve is shown in @fig-eq-yield.
 
