subscripts and last millions to billions change

--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -254,7 +254,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/recdevs2_withbars.png")
 
 ## Exploitation Status{-}
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target SO40% of unfished spawning output. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid-1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s, around the time the stock was declared overfished. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO~25%~, and slightly above the management target SO~40%~ of unfished spawning output. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid-1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s, around the time the stock was declared overfished. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
 
 <!-- Exploitation rates (i.e., total catch divided by exploitable biomass, or the annual SPR harvest rate) - include a table with the last 10 years of data and a graph showing the trend in fishing mortality relative to the target (y-axis) plotted against the trend in biomass relative to the target (x-axis). -->
 
@@ -305,7 +305,7 @@ No ecosystem or environmental data was used in the previous Yelloweye Rockfish a
 
 ## Reference Points{-}
 
-A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` billion eggs (95% confidence interval: 1,048.1 - 1,331.9 billion eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 billion eggs (95% confidence interval: 419 - 533), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108 - 137 mt).
+A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` billion eggs (95% confidence interval: 1,048.1 - 1,331.9 billion eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO~40%~), which is estimated by the model to be 476 billion eggs (95% confidence interval: 419 - 533), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO~40%~ (95% confidence interval: 108 - 137 mt).
 
 <!-- Management targets and definitions of overfishing, including the harvest rate that brings the stock to equilibrium at B24% for flatfishes and B40% for all other groundfish stocks (BMSY proxies) and the equilibrium stock size that results from fishing at the default harvest rate (the FMSY proxy). Include a summary table that compares estimated reference points for SSB, SPR, Exploitation Rate and Yield based on SSB proxy for MSY, SPR proxy for MSY, and estimated MSY values. -->
 
