catch table changes but have a little bit more to do

--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -56,7 +56,7 @@ recent_management_table |>
 #| label: tbl-all_removals
 #| warning: false
 #| echo: false
-#| tbl-cap: "Time series of Yelloweye Rockfish catches by fleet (mt) and total catch (mt) summed across fleets. Trawl fleets include Yelloweye Rockfish bycatch in foreign POP and in at-sea Pacific hake fisheries."
+#| tbl-cap: "Time series of Yelloweye Rockfish catches by fleet (mt or 1000s of fish) and total catch (mt) summed across fleets. Trawl fleets include Yelloweye Rockfish bycatch in foreign POP and in at-sea Pacific hake fisheries."
 
 cat("\\begin{landscape}\n")
 
