--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -148,14 +148,46 @@ projections_table[1:2, "Adopted ACL (mt)"] <- GMT016 |>
 #| results: "hide"
 
 
-catch_table <- inputs$dat$catch |>
-  dplyr::select(year, fleet, catch) |>
-  tidyr::pivot_wider(names_from = fleet, values_from = catch) |>
-  dplyr::rename("Year" = "year", "CA_TWL" = "1", "CA_NONTWL" = "2", "CA_REC" = "3", "ORWA_TWL" = "4", "ORWA_NONTWL" = "5", "OR_REC" = "6", "WA_REC" = "7") |>
-  dplyr::mutate(CA_TWL = round(CA_TWL,2), CA_NONTWL = round(CA_NONTWL,2), CA_REC = round(CA_REC, 2), ORWA_TWL = round(ORWA_TWL, 2), ORWA_NONTWL = round(ORWA_NONTWL, 2), OR_REC = round(OR_REC, 2), WA_REC = round(WA_REC, 2)) |>
-  dplyr::mutate(total_catch = round(rowSums(across(CA_TWL:WA_REC), na.rm = TRUE), 2)) |>
-  dplyr::rename("CA TWL (mt)" = "CA_TWL", "CA NONTWL (mt)" = "CA_NONTWL", "CA REC (mt)" = "CA_REC", "ORWA TWL (mt)" = "ORWA_TWL", "ORWA NONTWL (mt)" = "ORWA_NONTWL", "OR REC (mt)" = "OR_REC", "WA REC (1000s of fish)" = "WA_REC", "Catch (mt)" = "total_catch") |>
-  dplyr::filter(Year > 1)
+replist <- SS_output(here::here("model", "base_comm_discards_steepness_fitbias_tuned"))
+
+use_timeseries <- replist[["timeseries"]]
+
+CA_use_timeseries <- dplyr::filter(use_timeseries, Area == 1)
+
+ORWA_use_timeseries <- dplyr::filter(use_timeseries, Area == 2)
+
+all_catch <- data.frame(
+  deadB_1 = CA_use_timeseries$`dead(B):_1`,
+  deadB_2 = CA_use_timeseries$`dead(B):_2`,
+  deadB_3 = CA_use_timeseries$`dead(B):_3`,
+  deadB_4 = ORWA_use_timeseries$`dead(B):_4`,
+  deadB_5 = ORWA_use_timeseries$`dead(B):_5`,
+  deadB_6 = ORWA_use_timeseries$`dead(B):_6`,
+  deadB_7 = ORWA_use_timeseries$`dead(B):_7`,
+  deadN_7 = ORWA_use_timeseries$`dead(N):_7`
+)
+
+all_catch$year <- CA_use_timeseries$Yr
+
+catch_table <- all_catch |>
+  dplyr::select(year, everything()) |>
+  dplyr::rename("Year" = "year", "CA_TWL" = "deadB_1", "CA_NONTWL" = "deadB_2", "CA_REC" = "deadB_3", "ORWA_TWL" = "deadB_4", "ORWA_NONTWL" = "deadB_5", "OR_REC" = "deadB_6", "WA_REC" = "deadB_7", "WA_REC_numbers" = "deadN_7")|>
+  dplyr::mutate(CA_TWL = round(CA_TWL,2), CA_NONTWL = round(CA_NONTWL,2), CA_REC = round(CA_REC, 2), ORWA_TWL = round(ORWA_TWL, 2), ORWA_NONTWL = round(ORWA_NONTWL, 2), OR_REC = round(OR_REC, 2), WA_REC = round(WA_REC, 2), WA_REC_numbers = round(WA_REC_numbers, 2) )|>
+    dplyr::select(-WA_REC)|> #remove wa rec mt, so comment out if we also want WA rec catch in mt
+      dplyr::mutate(total_catch = round(rowSums(across(CA_TWL:OR_REC), na.rm = TRUE), 2)) |> #also will have to make this to WA:REC
+      dplyr::rename("CA TWL (mt)" = "CA_TWL", "CA NONTWL (mt)" = "CA_NONTWL", "CA REC (mt)" = "CA_REC", "ORWA TWL (mt)" = "ORWA_TWL", "ORWA NONTWL (mt)" = "ORWA_NONTWL", "OR REC (mt)" = "OR_REC", "WA REC (1000s of fish)" = "WA_REC_numbers", "Catch (mt)" = "total_catch") |> #would have to add back in WA REC (mt)" = "WA_REC"
+  dplyr::filter(Year > 1888 & Year < 2025)
+  
+#################################################################
+
+#catch_table <- inputs$dat$catch |>
+#  dplyr::select(year, fleet, catch) |>
+#  tidyr::pivot_wider(names_from = fleet, values_from = catch) |>
+#  dplyr::rename("Year" = "year", "CA_TWL" = "1", "CA_NONTWL" = "2", "CA_REC" = "3", "ORWA_TWL" = "4", "ORWA_NONTWL" = "5", "OR_REC" = "6", "WA_REC" = "7") |>
+#  dplyr::mutate(CA_TWL = round(CA_TWL,2), CA_NONTWL = round(CA_NONTWL,2), CA_REC = round(CA_REC, 2), ORWA_TWL = round(ORWA_TWL, 2), ORWA_NONTWL = round(ORWA_NONTWL, 2), OR_REC = round(OR_REC, 2), WA_REC = round(WA_REC, 2)) |>
+#  dplyr::mutate(total_catch = round(rowSums(across(CA_TWL:WA_REC), na.rm = TRUE), 2)) |>
+#  dplyr::rename("CA TWL (mt)" = "CA_TWL", "CA NONTWL (mt)" = "CA_NONTWL", "CA REC (mt)" = "CA_REC", "ORWA TWL (mt)" = "ORWA_TWL", "ORWA NONTWL (mt)" = "ORWA_NONTWL", "OR REC (mt)" = "OR_REC", "WA REC (1000s of fish)" = "WA_REC", "Catch (mt)" = "total_catch") |>
+#  dplyr::filter(Year > 1)
 # produce catch_table IF WE WANT WA REC IN MT
 
 #####################################################
