--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -37,7 +37,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 #| eval: true
 #| warning: false
 #| echo: false
-#| tbl-cap: "Recent catches (mt) by fleet and total catch (mt) summed across fleets." 
+#| tbl-cap: "Recent catches (mt or 1000s of fish) by fleet and total catch (mt) summed across fleets." 
 #| tbl-pos: H
 
 cat("\\begin{landscape}\n")
