--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -541,8 +541,9 @@ metric tons (mt) between 1889 and 2024 for each fleet.}
 
 \begin{table}[H]
 
-\caption{\label{tbl-es-catches}Recent catches (mt) by fleet and total
-catch (mt) summed across fleets.}
+\caption{\label{tbl-es-catches}Recent catches by fleet and total catch
+(mt) summed across fleets (total catch includes WA REC catch converted
+to mt).}
 
 \centering{
 
@@ -551,16 +552,16 @@ catch (mt) summed across fleets.}
 \toprule
 Year & CA TWL (mt) & CA NONTWL (mt) & CA REC (mt) & ORWA TWL (mt) & ORWA NONTWL (mt) & OR REC (mt) & WA REC (1000s of fish) & Catch (mt) \\ 
 \midrule\addlinespace[2.5pt]
-2015 & 0.00 & 0.40 & 2.00 & 0.03 & 3.15 & 4.26 & 1.00 & 10.84 \\ 
-2016 & 0.00 & 0.00 & 1.00 & 0.07 & 2.59 & 2.84 & 1.17 & 7.67 \\ 
-2017 & 0.01 & 1.23 & 4.52 & 0.24 & 6.97 & 4.27 & 1.18 & 18.42 \\ 
-2018 & 0.00 & 0.00 & 4.99 & 0.54 & 6.38 & 4.01 & 1.22 & 17.14 \\ 
-2019 & 0.04 & 0.00 & 6.16 & 0.59 & 7.43 & 5.04 & 2.01 & 21.27 \\ 
-2020 & 0.13 & 0.00 & 1.95 & 0.32 & 7.52 & 6.00 & 1.07 & 16.99 \\ 
-2021 & 0.12 & 2.43 & 3.96 & 0.39 & 7.97 & 3.34 & 1.21 & 19.42 \\ 
-2022 & 0.10 & 5.60 & 3.80 & 0.76 & 15.55 & 5.20 & 1.26 & 32.27 \\ 
-2023 & 0.09 & 1.83 & 9.59 & 0.40 & 20.64 & 3.84 & 1.37 & 37.76 \\ 
-2024 & 0.19 & 3.27 & 4.65 & 0.49 & 13.51 & 3.66 & 1.39 & 27.16 \\ 
+2015 & 0.00 & 0.40 & 2.00 & 0.03 & 3.15 & 4.26 & 1.00 & 9.84 \\ 
+2016 & 0.00 & 0.00 & 1.00 & 0.07 & 2.59 & 2.84 & 1.17 & 6.50 \\ 
+2017 & 0.01 & 1.23 & 4.52 & 0.24 & 6.97 & 4.27 & 1.18 & 17.24 \\ 
+2018 & 0.00 & 0.00 & 4.99 & 0.54 & 6.38 & 4.01 & 1.22 & 15.92 \\ 
+2019 & 0.04 & 0.00 & 6.16 & 0.59 & 7.43 & 5.04 & 2.01 & 19.26 \\ 
+2020 & 0.13 & 0.00 & 1.95 & 0.32 & 7.52 & 6.00 & 1.07 & 15.92 \\ 
+2021 & 0.12 & 2.43 & 3.96 & 0.39 & 7.97 & 3.34 & 1.21 & 18.21 \\ 
+2022 & 0.10 & 5.60 & 3.80 & 0.76 & 15.55 & 5.20 & 1.26 & 31.01 \\ 
+2023 & 0.09 & 1.83 & 9.59 & 0.40 & 20.64 & 3.84 & 1.37 & 36.39 \\ 
+2024 & 0.19 & 3.27 & 4.65 & 0.49 & 13.51 & 3.66 & 1.39 & 25.77 \\ 
 \bottomrule
 \end{tabular*}
 
@@ -763,14 +764,14 @@ intervals.}
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 40.1\% of its unexploited
-level. This is above the overfished threshold of SO25\%, and slightly
-above the management target SO40\% of unfished spawning output. Fishing
-intensity increased throughout the 1900s as the stock was fished down,
-until stabilizing at peak intensity between the mid-1980s and late 1990s
-and substantially decreasing in the late 1990s and early 2000s, around
-the time the stock was declared overfished. Fishing intensity has since
-been relatively stable (Figure~\ref{fig-es-kobe},
-Table~\ref{tbl-es-spr}).
+level. This is above the overfished threshold of SO\textsubscript{25\%},
+and slightly above the management target SO\textsubscript{40\%} of
+unfished spawning output. Fishing intensity increased throughout the
+1900s as the stock was fished down, until stabilizing at peak intensity
+between the mid-1980s and late 1990s and substantially decreasing in the
+late 1990s and early 2000s, around the time the stock was declared
+overfished. Fishing intensity has since been relatively stable
+(Figure~\ref{fig-es-kobe}, Table~\ref{tbl-es-spr}).
 
 \begin{figure}[H]
 
@@ -841,10 +842,11 @@ Table~\ref{tbl-ref-points-es-1}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1190 billion eggs (95\%
 confidence interval: 1,048.1 - 1,331.9 billion eggs). The management
 target for Yelloweye Rockfish is defined as 40\% of the unfished
-spawning output (SO40\%), which is estimated by the model to be 476
-billion eggs (95\% confidence interval: 419 - 533), which corresponds to
-an exploitation rate of 0.026. This harvest rate provides an equilibrium
-yield of 122 mt at SO40\% (95\% confidence interval: 108 - 137 mt).
+spawning output (SO\textsubscript{40\%}), which is estimated by the
+model to be 476 billion eggs (95\% confidence interval: 419 - 533),
+which corresponds to an exploitation rate of 0.026. This harvest rate
+provides an equilibrium yield of 122 mt at SO\textsubscript{40\%} (95\%
+confidence interval: 108 - 137 mt).
 
 \clearpage
 
@@ -924,9 +926,9 @@ Year & OFL (mt) & ABC (mt) & ACL (mt) & Catch (mt) \\
 2019 & 82 & 74 & 48 & 23 \\ 
 2020 & 84 & 77 & 49 & 18 \\ 
 2021 & 97 & 83 & 50 & 21 \\ 
-2022 & NA & NA & NA & 34 \\ 
-2023 & 90 & 75 & 52 & 39 \\ 
-2024 & 91 & 76 & 53 & 29 \\ 
+2022 & 98 & 83 & 51 & 34 \\ 
+2023 & 123 & 103 & 66 & 39 \\ 
+2024 & 123 & 103 & 66 & 29 \\ 
 \bottomrule
 
 \end{longtable}
@@ -956,8 +958,8 @@ assumed catch for the first two years of the projection period.}
 \toprule
 Year & Adopted OFL (mt) & Adopted ACL (mt) & Assumed Catch (mt) & OFL (mt) & Buffer & ABC (mt) & ACL (mt) & Spawning output & Fraction Unfished \\ 
 \midrule\addlinespace[2.5pt]
-2025 & 105.8 & 55.8 & 45.7 & — & — & — & — & 477.630 & 0.401 \\ 
-2026 & 108.3 & 56.6 & 46.4 & — & — & — & — & 502.268 & 0.422 \\ 
+2025 & 52.0 & 18.0 & 45.7 & — & — & — & — & 477.630 & 0.401 \\ 
+2026 & 52.0 & 19.0 & 46.4 & — & — & — & — & 502.268 & 0.422 \\ 
 2027 & — & — & — & 129.3 & 0.873 & 112.9 & 112.9 & 526.772 & 0.443 \\ 
 2028 & — & — & — & 130.9 & 0.864 & 113.1 & 113.1 & 543.555 & 0.457 \\ 
 2029 & — & — & — & 132.0 & 0.856 & 113.0 & 113.0 & 558.406 & 0.469 \\ 
@@ -2261,28 +2263,28 @@ indicator of abundance dynamics.
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 40.1\% of its unexploited
-level. This is above the overfished threshold of SO25\%, and slightly
-above the management target of SO\textsubscript{40\%} of unfished
-spawning output. Both areas (California and Oregon-Washington) are above
-the overfished level of 25\%. The assessment estimates that the
-coastwide spawning output of Yelloweye Rockfish dropped below the
+level. This is above the overfished threshold of SO\textsubscript{25\%},
+and slightly above the management target of SO\textsubscript{40\%} of
+unfished spawning output. Both areas (California and Oregon-Washington)
+are above the overfished level of 25\%. The assessment estimates that
+the coastwide spawning output of Yelloweye Rockfish dropped below the
 SO\textsubscript{40\%} target for the first time in 1986 and below the
-overfished SO25\% threshold in 1993, as a result of intense fishing by
-commercial and recreational fleets. It continued to decline and reached
-15.6\% of its unfished output in 2000 (Table~\ref{tbl-ts}). The stock
-was declared overfished in 2002. Since then, the spawning output has
-slowly increased due to management regulations implemented to foster
-stock rebuilding.
+overfished SO\textsubscript{25\%} threshold in 1993, as a result of
+intense fishing by commercial and recreational fleets. It continued to
+decline and reached 15.6\% of its unfished output in 2000
+(Table~\ref{tbl-ts}). The stock was declared overfished in 2002. Since
+then, the spawning output has slowly increased due to management
+regulations implemented to foster stock rebuilding.
 
 Reference points for the base model are summarized in
 Table~\ref{tbl-ref-points-es-2}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1190 billion eggs (95\%
 confidence interval: 1,048.1 - 1,331.9 billion eggs). The stock is
 declared overfished if the current spawning output is estimated to be
-below the \gls{msst} of 25\% of unfished level (SO25\%). The management
-target for Yelloweye Rockfish is defined as 40\% of the unfished
-spawning output (SO\textsubscript{40\%}), which is estimated by the
-model to be 476 billion eggs (95\% confidence interval: 419 - 533
+below the \gls{msst} of 25\% of unfished level (SO\textsubscript{25\%}).
+The management target for Yelloweye Rockfish is defined as 40\% of the
+unfished spawning output (SO\textsubscript{40\%}), which is estimated by
+the model to be 476 billion eggs (95\% confidence interval: 419 - 533
 billion eggs), which corresponds to an exploitation rate of 0.026. This
 harvest rate provides an equilibrium yield of 122 mt at
 SO\textsubscript{40\%} (95\% confidence interval: 108 - 137 mt). The
@@ -2576,9 +2578,9 @@ Year & OFL (mt) & ABC (mt) & ACL (mt) & Catch (mt) \\
 2019 & 82 & 74 & 48 & 23 \\ 
 2020 & 84 & 77 & 49 & 18 \\ 
 2021 & 97 & 83 & 50 & 21 \\ 
-2022 & NA & NA & NA & 34 \\ 
-2023 & 90 & 75 & 52 & 39 \\ 
-2024 & 91 & 76 & 53 & 29 \\ 
+2022 & 98 & 83 & 51 & 34 \\ 
+2023 & 123 & 103 & 66 & 39 \\ 
+2024 & 123 & 103 & 66 & 29 \\ 
 \bottomrule
 
 \end{longtable}
@@ -2594,9 +2596,9 @@ Year & OFL (mt) & ABC (mt) & ACL (mt) & Catch (mt) \\
 \begin{longtable}{>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}>{\raggedleft\arraybackslash}p{\dimexpr 56.25pt -2\tabcolsep-1.5\arrayrulewidth}}
 
 \caption{\label{tbl-all_removals}Time series of Yelloweye Rockfish
-catches by fleet (mt) and total catch (mt) summed across fleets. Trawl
-fleets include Yelloweye Rockfish bycatch in foreign POP and in at-sea
-Pacific hake fisheries.}
+catches by fleet and total catch (mt) summed across fleets (total catch
+includes WA REC catch converted to mt). Trawl fleets include Yelloweye
+Rockfish bycatch in foreign POP and in at-sea Pacific hake fisheries.}
 
 \tabularnewline
 
@@ -2681,64 +2683,64 @@ Year & CA TWL (mt) & CA NONTWL (mt) & CA REC (mt) & ORWA TWL (mt) & ORWA NONTWL 
 1964 & 3.12 & 4.56 & 18.96 & 1.95 & 3.11 & 0.00 & 0.00 & 31.70 \\ 
 1965 & 3.86 & 5.51 & 29.11 & 67.88 & 4.68 & 0.00 & 0.00 & 111.04 \\ 
 1966 & 3.62 & 4.45 & 31.60 & 3.03 & 3.24 & 0.00 & 0.00 & 45.94 \\ 
-1967 & 6.17 & 4.38 & 31.89 & 6.82 & 6.60 & 0.00 & 0.78 & 56.64 \\ 
-1968 & 3.78 & 3.89 & 37.66 & 2.97 & 5.66 & 0.00 & 0.15 & 54.11 \\ 
-1969 & 21.80 & 3.91 & 40.62 & 47.76 & 13.08 & 0.00 & 0.37 & 127.54 \\ 
-1970 & 24.22 & 3.47 & 45.79 & 7.05 & 4.31 & 0.00 & 0.57 & 85.41 \\ 
-1971 & 41.77 & 4.73 & 40.72 & 13.65 & 8.34 & 0.00 & 0.90 & 110.11 \\ 
-1972 & 56.22 & 7.44 & 52.36 & 7.35 & 10.86 & 0.00 & 1.18 & 135.41 \\ 
-1973 & 43.62 & 5.89 & 66.48 & 9.52 & 11.46 & 7.40 & 1.49 & 145.86 \\ 
-1974 & 44.80 & 11.59 & 70.15 & 4.41 & 14.46 & 12.78 & 1.38 & 159.57 \\ 
-1975 & 50.31 & 9.93 & 71.13 & 5.36 & 7.65 & 6.24 & 1.39 & 152.01 \\ 
-1976 & 45.27 & 13.39 & 80.63 & 6.91 & 10.15 & 19.38 & 1.45 & 177.18 \\ 
-1977 & 42.51 & 14.95 & 72.78 & 4.97 & 17.02 & 19.91 & 2.99 & 175.13 \\ 
-1978 & 123.44 & 30.76 & 67.89 & 23.64 & 24.10 & 24.52 & 1.48 & 295.83 \\ 
-1979 & 61.02 & 38.31 & 76.31 & 44.58 & 49.10 & 52.62 & 1.74 & 323.68 \\ 
-1980 & 15.48 & 26.58 & 72.51 & 83.95 & 24.96 & 40.43 & 0.87 & 264.78 \\ 
-1981 & 30.20 & 119.50 & 47.00 & 91.34 & 23.95 & 37.20 & 1.62 & 350.81 \\ 
-1982 & 199.93 & 15.59 & 102.00 & 156.08 & 31.45 & 65.06 & 2.33 & 572.44 \\ 
-1983 & 56.65 & 7.68 & 51.00 & 287.29 & 45.95 & 46.08 & 3.20 & 497.85 \\ 
-1984 & 44.03 & 4.42 & 77.00 & 113.98 & 39.39 & 41.86 & 5.43 & 326.11 \\ 
-1985 & 7.42 & 4.23 & 124.00 & 200.04 & 69.72 & 12.72 & 4.13 & 422.26 \\ 
-1986 & 9.89 & 23.43 & 65.00 & 92.92 & 66.15 & 95.62 & 4.02 & 357.03 \\ 
-1987 & 16.84 & 38.00 & 75.00 & 71.75 & 97.08 & 41.64 & 5.05 & 345.36 \\ 
-1988 & 30.57 & 34.95 & 58.00 & 130.64 & 47.45 & 10.78 & 3.96 & 316.35 \\ 
-1989 & 9.38 & 42.37 & 59.00 & 199.34 & 41.40 & 13.48 & 6.98 & 371.95 \\ 
-1990 & 10.08 & 70.26 & 46.25 & 81.07 & 68.95 & 17.57 & 3.55 & 297.73 \\ 
-1991 & 13.98 & 133.07 & 33.50 & 121.38 & 85.62 & 27.81 & 6.46 & 421.82 \\ 
-1992 & 15.83 & 96.85 & 20.75 & 135.66 & 89.87 & 27.55 & 5.83 & 392.34 \\ 
-1993 & 6.18 & 46.59 & 8.00 & 137.96 & 138.25 & 25.52 & 5.92 & 368.42 \\ 
-1994 & 4.70 & 49.78 & 14.00 & 86.00 & 79.29 & 16.19 & 3.42 & 253.38 \\ 
-1995 & 3.69 & 47.68 & 13.00 & 131.32 & 40.43 & 20.49 & 3.34 & 259.95 \\ 
-1996 & 16.32 & 56.18 & 12.00 & 83.88 & 93.25 & 8.29 & 3.60 & 273.52 \\ 
-1997 & 6.20 & 57.06 & 15.00 & 80.13 & 115.54 & 14.18 & 3.68 & 291.79 \\ 
-1998 & 4.10 & 17.64 & 5.00 & 41.18 & 45.05 & 16.22 & 4.74 & 133.93 \\ 
-1999 & 8.66 & 13.73 & 13.00 & 18.94 & 102.00 & 12.25 & 3.53 & 172.11 \\ 
-2000 & 0.73 & 3.31 & 8.00 & 5.07 & 15.04 & 10.69 & 3.83 & 46.67 \\ 
-2001 & 0.62 & 3.90 & 5.00 & 1.63 & 26.31 & 4.69 & 4.12 & 46.27 \\ 
-2002 & 0.36 & 0.03 & 2.00 & 1.59 & 4.15 & 3.11 & 0.90 & 12.14 \\ 
-2003 & 0.13 & 0.05 & 4.00 & 0.55 & 2.24 & 3.32 & 0.66 & 10.95 \\ 
-2004 & 0.02 & 0.75 & 1.00 & 0.50 & 2.38 & 1.54 & 1.10 & 7.29 \\ 
-2005 & 0.02 & 0.73 & 1.00 & 1.24 & 1.66 & 2.13 & 1.31 & 8.09 \\ 
-2006 & 0.00 & 0.20 & 1.00 & 1.42 & 2.16 & 1.72 & 0.49 & 6.99 \\ 
-2007 & 0.00 & 0.93 & 4.00 & 0.09 & 3.68 & 2.13 & 0.73 & 11.56 \\ 
-2008 & 0.02 & 0.64 & 1.00 & 0.16 & 3.43 & 2.12 & 0.62 & 7.99 \\ 
-2009 & 0.02 & 0.19 & 5.00 & 0.09 & 2.18 & 1.88 & 0.64 & 10.00 \\ 
-2010 & 0.06 & 0.04 & 1.00 & 0.08 & 0.86 & 1.95 & 0.79 & 4.78 \\ 
-2011 & 0.00 & 0.20 & 2.00 & 0.06 & 1.21 & 2.17 & 0.89 & 6.53 \\ 
-2012 & 0.00 & 0.88 & 2.00 & 0.06 & 1.91 & 3.19 & 1.28 & 9.32 \\ 
-2013 & 0.01 & 0.56 & 1.00 & 0.11 & 2.94 & 3.22 & 0.81 & 8.65 \\ 
-2014 & 0.06 & 0.02 & 1.00 & 0.03 & 2.16 & 2.73 & 1.09 & 7.09 \\ 
-2015 & 0.00 & 0.40 & 2.00 & 0.03 & 3.15 & 4.26 & 1.00 & 10.84 \\ 
-2016 & 0.00 & 0.00 & 1.00 & 0.07 & 2.59 & 2.84 & 1.17 & 7.67 \\ 
-2017 & 0.01 & 1.23 & 4.52 & 0.24 & 6.97 & 4.27 & 1.18 & 18.42 \\ 
-2018 & 0.00 & 0.00 & 4.99 & 0.54 & 6.38 & 4.01 & 1.22 & 17.14 \\ 
-2019 & 0.04 & 0.00 & 6.16 & 0.59 & 7.43 & 5.04 & 2.01 & 21.27 \\ 
-2020 & 0.13 & 0.00 & 1.95 & 0.32 & 7.52 & 6.00 & 1.07 & 16.99 \\ 
-2021 & 0.12 & 2.43 & 3.96 & 0.39 & 7.97 & 3.34 & 1.21 & 19.42 \\ 
-2022 & 0.10 & 5.60 & 3.80 & 0.76 & 15.55 & 5.20 & 1.26 & 32.27 \\ 
-2023 & 0.09 & 1.83 & 9.59 & 0.40 & 20.64 & 3.84 & 1.37 & 37.76 \\ 
-2024 & 0.19 & 3.27 & 4.65 & 0.49 & 13.51 & 3.66 & 1.39 & 27.16 \\ 
+1967 & 6.17 & 4.38 & 31.89 & 6.82 & 6.60 & 0.00 & 0.78 & 55.86 \\ 
+1968 & 3.78 & 3.89 & 37.66 & 2.97 & 5.66 & 0.00 & 0.15 & 53.96 \\ 
+1969 & 21.80 & 3.91 & 40.62 & 47.76 & 13.08 & 0.00 & 0.37 & 127.17 \\ 
+1970 & 24.22 & 3.47 & 45.79 & 7.05 & 4.31 & 0.00 & 0.57 & 84.84 \\ 
+1971 & 41.77 & 4.73 & 40.72 & 13.65 & 8.34 & 0.00 & 0.90 & 109.21 \\ 
+1972 & 56.22 & 7.44 & 52.36 & 7.35 & 10.86 & 0.00 & 1.18 & 134.23 \\ 
+1973 & 43.62 & 5.89 & 66.48 & 9.52 & 11.46 & 7.40 & 1.49 & 144.37 \\ 
+1974 & 44.80 & 11.59 & 70.15 & 4.41 & 14.46 & 12.78 & 1.38 & 158.19 \\ 
+1975 & 50.31 & 9.93 & 71.13 & 5.36 & 7.65 & 6.24 & 1.39 & 150.62 \\ 
+1976 & 45.27 & 13.39 & 80.63 & 6.91 & 10.15 & 19.38 & 1.45 & 175.73 \\ 
+1977 & 42.51 & 14.95 & 72.78 & 4.97 & 17.02 & 19.91 & 2.99 & 172.14 \\ 
+1978 & 123.44 & 30.76 & 67.89 & 23.64 & 24.10 & 24.52 & 1.48 & 294.35 \\ 
+1979 & 61.02 & 38.31 & 76.31 & 44.58 & 49.10 & 52.62 & 1.74 & 321.94 \\ 
+1980 & 15.48 & 26.58 & 72.51 & 83.95 & 24.96 & 40.43 & 0.87 & 263.91 \\ 
+1981 & 30.20 & 119.50 & 47.00 & 91.34 & 23.95 & 37.20 & 1.62 & 349.19 \\ 
+1982 & 199.93 & 15.59 & 102.00 & 156.08 & 31.45 & 65.06 & 2.33 & 570.11 \\ 
+1983 & 56.65 & 7.68 & 51.00 & 287.29 & 45.95 & 46.08 & 3.20 & 494.65 \\ 
+1984 & 44.03 & 4.42 & 77.00 & 113.98 & 39.39 & 41.86 & 5.43 & 320.68 \\ 
+1985 & 7.42 & 4.23 & 124.00 & 200.04 & 69.72 & 12.72 & 4.13 & 418.13 \\ 
+1986 & 9.89 & 23.43 & 65.00 & 92.92 & 66.15 & 95.62 & 4.02 & 353.01 \\ 
+1987 & 16.84 & 38.00 & 75.00 & 71.75 & 97.08 & 41.64 & 5.05 & 340.31 \\ 
+1988 & 30.57 & 34.95 & 58.00 & 130.64 & 47.45 & 10.78 & 3.96 & 312.39 \\ 
+1989 & 9.38 & 42.37 & 59.00 & 199.34 & 41.40 & 13.48 & 6.98 & 364.97 \\ 
+1990 & 10.08 & 70.26 & 46.25 & 81.07 & 68.95 & 17.57 & 3.55 & 294.18 \\ 
+1991 & 13.98 & 133.07 & 33.50 & 121.38 & 85.62 & 27.81 & 6.46 & 415.36 \\ 
+1992 & 15.83 & 96.85 & 20.75 & 135.66 & 89.87 & 27.55 & 5.83 & 386.51 \\ 
+1993 & 6.18 & 46.59 & 8.00 & 137.96 & 138.25 & 25.52 & 5.92 & 362.50 \\ 
+1994 & 4.70 & 49.78 & 14.00 & 86.00 & 79.29 & 16.19 & 3.42 & 249.96 \\ 
+1995 & 3.69 & 47.68 & 13.00 & 131.32 & 40.43 & 20.49 & 3.34 & 256.61 \\ 
+1996 & 16.32 & 56.18 & 12.00 & 83.88 & 93.25 & 8.29 & 3.60 & 269.92 \\ 
+1997 & 6.20 & 57.06 & 15.00 & 80.13 & 115.54 & 14.18 & 3.68 & 288.11 \\ 
+1998 & 4.10 & 17.64 & 5.00 & 41.18 & 45.05 & 16.22 & 4.74 & 129.19 \\ 
+1999 & 8.66 & 13.73 & 13.00 & 18.94 & 102.00 & 12.25 & 3.53 & 168.58 \\ 
+2000 & 0.73 & 3.31 & 8.00 & 5.07 & 15.04 & 10.69 & 3.83 & 42.84 \\ 
+2001 & 0.62 & 3.90 & 5.00 & 1.63 & 26.31 & 4.69 & 4.12 & 42.15 \\ 
+2002 & 0.36 & 0.03 & 2.00 & 1.59 & 4.15 & 3.11 & 0.90 & 11.24 \\ 
+2003 & 0.13 & 0.05 & 4.00 & 0.55 & 2.24 & 3.32 & 0.66 & 10.29 \\ 
+2004 & 0.02 & 0.75 & 1.00 & 0.50 & 2.38 & 1.54 & 1.10 & 6.19 \\ 
+2005 & 0.02 & 0.73 & 1.00 & 1.24 & 1.66 & 2.13 & 1.31 & 6.78 \\ 
+2006 & 0.00 & 0.20 & 1.00 & 1.42 & 2.16 & 1.72 & 0.49 & 6.50 \\ 
+2007 & 0.00 & 0.93 & 4.00 & 0.09 & 3.68 & 2.13 & 0.73 & 10.83 \\ 
+2008 & 0.02 & 0.64 & 1.00 & 0.16 & 3.43 & 2.12 & 0.62 & 7.37 \\ 
+2009 & 0.02 & 0.19 & 5.00 & 0.09 & 2.18 & 1.88 & 0.64 & 9.36 \\ 
+2010 & 0.06 & 0.04 & 1.00 & 0.08 & 0.86 & 1.95 & 0.79 & 3.99 \\ 
+2011 & 0.00 & 0.20 & 2.00 & 0.06 & 1.21 & 2.17 & 0.89 & 5.64 \\ 
+2012 & 0.00 & 0.88 & 2.00 & 0.06 & 1.91 & 3.19 & 1.28 & 8.04 \\ 
+2013 & 0.01 & 0.56 & 1.00 & 0.11 & 2.94 & 3.22 & 0.81 & 7.84 \\ 
+2014 & 0.06 & 0.02 & 1.00 & 0.03 & 2.16 & 2.73 & 1.09 & 6.00 \\ 
+2015 & 0.00 & 0.40 & 2.00 & 0.03 & 3.15 & 4.26 & 1.00 & 9.84 \\ 
+2016 & 0.00 & 0.00 & 1.00 & 0.07 & 2.59 & 2.84 & 1.17 & 6.50 \\ 
+2017 & 0.01 & 1.23 & 4.52 & 0.24 & 6.97 & 4.27 & 1.18 & 17.24 \\ 
+2018 & 0.00 & 0.00 & 4.99 & 0.54 & 6.38 & 4.01 & 1.22 & 15.92 \\ 
+2019 & 0.04 & 0.00 & 6.16 & 0.59 & 7.43 & 5.04 & 2.01 & 19.26 \\ 
+2020 & 0.13 & 0.00 & 1.95 & 0.32 & 7.52 & 6.00 & 1.07 & 15.92 \\ 
+2021 & 0.12 & 2.43 & 3.96 & 0.39 & 7.97 & 3.34 & 1.21 & 18.21 \\ 
+2022 & 0.10 & 5.60 & 3.80 & 0.76 & 15.55 & 5.20 & 1.26 & 31.01 \\ 
+2023 & 0.09 & 1.83 & 9.59 & 0.40 & 20.64 & 3.84 & 1.37 & 36.39 \\ 
+2024 & 0.19 & 3.27 & 4.65 & 0.49 & 13.51 & 3.66 & 1.39 & 25.77 \\ 
 \bottomrule
 
 \end{longtable}
@@ -3380,8 +3382,8 @@ Label & Base & Est. M & Est. steepness & 2017 LW relationship\\
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Estimates of derived quantities}}\\
 \hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{11.865} & \textcolor{black}{10.281} & \textcolor{black}{10.331}\\
-\hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1316.36} & \textcolor{black}{1184.16} & \textcolor{black}{1190}\\
-\hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{724.664} & \textcolor{black}{639.998} & \textcolor{black}{477.63}\\
+\hspace{1em}B0 billions of eggs & \textcolor{black}{1190} & \textcolor{black}{1316.36} & \textcolor{black}{1184.16} & \textcolor{black}{1190}\\
+\hspace{1em}B2025 billions of eggs & \textcolor{black}{477.63} & \textcolor{black}{724.664} & \textcolor{black}{639.998} & \textcolor{black}{477.63}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.551} & \textcolor{black}{0.54} & \textcolor{black}{0.401}\\
 \hspace{1em}Fishing intensity 2024 & \textcolor{black}{0.357} & \textcolor{black}{0.215} & \textcolor{black}{0.276} & \textcolor{black}{0.357}\\
 \bottomrule
@@ -3426,8 +3428,8 @@ Label & Base & - CA REC & - OR REC & - WA REC & - CA CPFV & - ORFS & - Triennial
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{Estimates of derived quantities}}\\
 \hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.156} & \textcolor{black}{10.194} & \textcolor{black}{9.9} & \textcolor{black}{10.52} & \textcolor{black}{10.358} & \textcolor{black}{10.382} & \textcolor{black}{10.489} & \textcolor{black}{9.916} & \textcolor{black}{9.454}\\
-\hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1169.99} & \textcolor{black}{1174.29} & \textcolor{black}{1140.22} & \textcolor{black}{1211.93} & \textcolor{black}{1193.95} & \textcolor{black}{1195.11} & \textcolor{black}{1205.33} & \textcolor{black}{1162.9} & \textcolor{black}{1111.28}\\
-\hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{459.638} & \textcolor{black}{464.736} & \textcolor{black}{434.657} & \textcolor{black}{499.77} & \textcolor{black}{488.3} & \textcolor{black}{485.989} & \textcolor{black}{484.887} & \textcolor{black}{391.733} & \textcolor{black}{339.272}\\
+\hspace{1em}B0 billions of eggs & \textcolor{black}{1190} & \textcolor{black}{1169.99} & \textcolor{black}{1174.29} & \textcolor{black}{1140.22} & \textcolor{black}{1211.93} & \textcolor{black}{1193.95} & \textcolor{black}{1195.11} & \textcolor{black}{1205.33} & \textcolor{black}{1162.9} & \textcolor{black}{1111.28}\\
+\hspace{1em}B2025 billions of eggs & \textcolor{black}{477.63} & \textcolor{black}{459.638} & \textcolor{black}{464.736} & \textcolor{black}{434.657} & \textcolor{black}{499.77} & \textcolor{black}{488.3} & \textcolor{black}{485.989} & \textcolor{black}{484.887} & \textcolor{black}{391.733} & \textcolor{black}{339.272}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.393} & \textcolor{black}{0.396} & \textcolor{black}{0.381} & \textcolor{black}{0.412} & \textcolor{black}{0.409} & \textcolor{black}{0.407} & \textcolor{black}{0.402} & \textcolor{black}{0.337} & \textcolor{black}{0.305}\\
 \hspace{1em}Fishing intensity 2024 & \textcolor{black}{0.357} & \textcolor{black}{0.368} & \textcolor{black}{0.365} & \textcolor{black}{0.385} & \textcolor{black}{0.343} & \textcolor{black}{0.35} & \textcolor{black}{0.351} & \textcolor{black}{0.357} & \textcolor{black}{0.428} & \textcolor{black}{0.484}\\
 \bottomrule
@@ -3472,8 +3474,8 @@ Label & Base & - CA TWL & - CA NONTWL & - CA REC & - ORWA TWL & - ORWA NONTWL & 
 \addlinespace[0.3em]
 \multicolumn{9}{l}{\textbf{Estimates of derived quantities}}\\
 \hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.24} & \textcolor{black}{10.38} & \textcolor{black}{10.41} & \textcolor{black}{10.278} & \textcolor{black}{10.468} & \textcolor{black}{10.661} & \textcolor{black}{10.304}\\
-\hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1178.36} & \textcolor{black}{1194.97} & \textcolor{black}{1198.67} & \textcolor{black}{1182.05} & \textcolor{black}{1207.27} & \textcolor{black}{1231.32} & \textcolor{black}{1184.65}\\
-\hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{471.102} & \textcolor{black}{447.839} & \textcolor{black}{511.303} & \textcolor{black}{520.246} & \textcolor{black}{500.739} & \textcolor{black}{543.75} & \textcolor{black}{475.296}\\
+\hspace{1em}B0 billions of eggs & \textcolor{black}{1190} & \textcolor{black}{1178.36} & \textcolor{black}{1194.97} & \textcolor{black}{1198.67} & \textcolor{black}{1182.05} & \textcolor{black}{1207.27} & \textcolor{black}{1231.32} & \textcolor{black}{1184.65}\\
+\hspace{1em}B2025 billions of eggs & \textcolor{black}{477.63} & \textcolor{black}{471.102} & \textcolor{black}{447.839} & \textcolor{black}{511.303} & \textcolor{black}{520.246} & \textcolor{black}{500.739} & \textcolor{black}{543.75} & \textcolor{black}{475.296}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.4} & \textcolor{black}{0.375} & \textcolor{black}{0.427} & \textcolor{black}{0.44} & \textcolor{black}{0.415} & \textcolor{black}{0.442} & \textcolor{black}{0.401}\\
 \hspace{1em}Fishing intensity 2024 & \textcolor{black}{0.357} & \textcolor{black}{0.36} & \textcolor{black}{0.371} & \textcolor{black}{0.341} & \textcolor{black}{0.333} & \textcolor{black}{0.344} & \textcolor{black}{0.322} & \textcolor{black}{0.361}\\
 \bottomrule
@@ -3517,8 +3519,8 @@ Label & Base & - CA CPFV & - ORFS & - Triennial & - WCGBTS & - IPHC & No length 
 \addlinespace[0.3em]
 \multicolumn{8}{l}{\textbf{Estimates of derived quantities}}\\
 \hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.277} & \textcolor{black}{10.357} & \textcolor{black}{10.295} & \textcolor{black}{10.353} & \textcolor{black}{10.298} & \textcolor{black}{16.697}\\
-\hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1184.01} & \textcolor{black}{1193.73} & \textcolor{black}{1185.09} & \textcolor{black}{1192.46} & \textcolor{black}{1186.1} & \textcolor{black}{1935.01}\\
-\hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{473.383} & \textcolor{black}{490.053} & \textcolor{black}{476.66} & \textcolor{black}{488.707} & \textcolor{black}{477.218} & \textcolor{black}{1450.16}\\
+\hspace{1em}B0 billions of eggs & \textcolor{black}{1190} & \textcolor{black}{1184.01} & \textcolor{black}{1193.73} & \textcolor{black}{1185.09} & \textcolor{black}{1192.46} & \textcolor{black}{1186.1} & \textcolor{black}{1935.01}\\
+\hspace{1em}B2025 billions of eggs & \textcolor{black}{477.63} & \textcolor{black}{473.383} & \textcolor{black}{490.053} & \textcolor{black}{476.66} & \textcolor{black}{488.707} & \textcolor{black}{477.218} & \textcolor{black}{1450.16}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.4} & \textcolor{black}{0.411} & \textcolor{black}{0.402} & \textcolor{black}{0.41} & \textcolor{black}{0.402} & \textcolor{black}{0.749}\\
 \hspace{1em}Fishing intensity 2024 & \textcolor{black}{0.357} & \textcolor{black}{0.359} & \textcolor{black}{0.349} & \textcolor{black}{0.357} & \textcolor{black}{0.351} & \textcolor{black}{0.356} & \textcolor{black}{0.163}\\
 \bottomrule
@@ -3562,8 +3564,8 @@ Label & Base & - CA NONTWL & - CA REC & - ORWA TWL & - ORWA NONTWL & - OR REC & 
 \addlinespace[0.3em]
 \multicolumn{8}{l}{\textbf{Estimates of derived quantities}}\\
 \hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.32} & \textcolor{black}{10.411} & \textcolor{black}{10.185} & \textcolor{black}{10.418} & \textcolor{black}{10.351} & \textcolor{black}{10.61}\\
-\hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1188.12} & \textcolor{black}{1197.32} & \textcolor{black}{1169.27} & \textcolor{black}{1200.16} & \textcolor{black}{1189.66} & \textcolor{black}{1217.61}\\
-\hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{475.113} & \textcolor{black}{475.18} & \textcolor{black}{461.464} & \textcolor{black}{485.851} & \textcolor{black}{469.622} & \textcolor{black}{502.097}\\
+\hspace{1em}B0 billions of eggs & \textcolor{black}{1190} & \textcolor{black}{1188.12} & \textcolor{black}{1197.32} & \textcolor{black}{1169.27} & \textcolor{black}{1200.16} & \textcolor{black}{1189.66} & \textcolor{black}{1217.61}\\
+\hspace{1em}B2025 billions of eggs & \textcolor{black}{477.63} & \textcolor{black}{475.113} & \textcolor{black}{475.18} & \textcolor{black}{461.464} & \textcolor{black}{485.851} & \textcolor{black}{469.622} & \textcolor{black}{502.097}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.4} & \textcolor{black}{0.397} & \textcolor{black}{0.395} & \textcolor{black}{0.405} & \textcolor{black}{0.395} & \textcolor{black}{0.412}\\
 \hspace{1em}Fishing intensity 2024 & \textcolor{black}{0.357} & \textcolor{black}{0.358} & \textcolor{black}{0.358} & \textcolor{black}{0.372} & \textcolor{black}{0.35} & \textcolor{black}{0.359} & \textcolor{black}{0.341}\\
 \bottomrule
@@ -3607,8 +3609,8 @@ Label & Base & - WCGBTS & - IPHC & No age comps & McAllister-Ianelli\\
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{Estimates of derived quantities}}\\
 \hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.441} & \textcolor{black}{9.945} & \textcolor{black}{11.047} & \textcolor{black}{10.986}\\
-\hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1199.98} & \textcolor{black}{1166.44} & \textcolor{black}{1228.11} & \textcolor{black}{1241.2}\\
-\hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{471.858} & \textcolor{black}{393.043} & \textcolor{black}{469.146} & \textcolor{black}{549.181}\\
+\hspace{1em}B0 billions of eggs & \textcolor{black}{1190} & \textcolor{black}{1199.98} & \textcolor{black}{1166.44} & \textcolor{black}{1228.11} & \textcolor{black}{1241.2}\\
+\hspace{1em}B2025 billions of eggs & \textcolor{black}{477.63} & \textcolor{black}{471.858} & \textcolor{black}{393.043} & \textcolor{black}{469.146} & \textcolor{black}{549.181}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.393} & \textcolor{black}{0.337} & \textcolor{black}{0.382} & \textcolor{black}{0.442}\\
 \hspace{1em}Fishing intensity 2024 & \textcolor{black}{0.357} & \textcolor{black}{0.365} & \textcolor{black}{0.427} & \textcolor{black}{0.372} & \textcolor{black}{0.316}\\
 \bottomrule
@@ -4007,8 +4009,8 @@ assumed catch for the first two years of the projection period.}
 \toprule
 Year & Adopted OFL (mt) & Adopted ACL (mt) & Assumed Catch (mt) & OFL (mt) & Buffer & ABC (mt) & ACL (mt) & Spawning output & Fraction Unfished \\ 
 \midrule\addlinespace[2.5pt]
-2025 & 105.8 & 55.8 & 45.7 & — & — & — & — & 477.6 & 0.401 \\ 
-2026 & 108.3 & 56.6 & 46.4 & — & — & — & — & 502.3 & 0.422 \\ 
+2025 & 52.0 & 18.0 & 45.7 & — & — & — & — & 477.6 & 0.401 \\ 
+2026 & 52.0 & 19.0 & 46.4 & — & — & — & — & 502.3 & 0.422 \\ 
 2027 & — & — & — & 129.3 & 0.873 & 112.9 & 112.9 & 526.8 & 0.443 \\ 
 2028 & — & — & — & 130.9 & 0.864 & 113.1 & 113.1 & 543.6 & 0.457 \\ 
 2029 & — & — & — & 132.0 & 0.856 & 113.0 & 113.0 & 558.4 & 0.469 \\ 
