most recent render

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -1570,7 +1570,7 @@ beyond the data and edge effects. Spatial variation was included in the
 encounter probability and the positive catch rate model. Spatial
 variation was approximated using 200 knots, where more knots led to
 non-estimable standard errors because the positive encounters are too
-sparse to support the dense spatiotemporal structure. Anisotropy was not
+sparse to support the dense spatial structure. Anisotropy was not
 estimated.
 
 The biomass estimates produced for this assessment using \gls{sdmtmb}
